5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4486/executions/1590_825.log
== TEST (2019-03-29 23:40:06) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = float(input("Digite o raio:"))

A = pi * R * R
V = pi * R * R * R 

print(round(A,3),round(V,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    A = pi * R * R
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:40:24) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = float(input("Digite o raio:"))

A = pi * R * R
V = pi * R * R * R 

print(round(A,3),round(V,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    A = pi * R * R
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:40:27) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = float(input("Digite o raio:"))

A = pi * R * R
V = pi * R * R * R 

print(round(A,3),round(V,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    A = pi * R * R
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:41:41) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

R = float(input("Digite o raio:"))

A = math.pi  R
V = math.pi * R * R * R 

print(round(A,3),round(V,3))
-- ERROR:
File "XXXX", line 7
    A = math.pi  R
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:44:00) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math
R = float(input("Digite o raio:"))

A = pi  R
V = pi * R * R * R 

print(round(A,3),round(V,3))
-- ERROR:
File "XXXX", line 7
    A = pi  R
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:44:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math
R = float(input("Digite o raio:"))

A = pi * R
V = pi * R * R * R 

print(round(A,3),round(V,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    A = pi * R
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:44:34) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math
R = float(input("Digite o raio:"))

A = math.pi * R
V = math.pi * R * R * R 

print(round(A,3),round(V,3))
-- OUTPUT:
14.137 286.278
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:45:53) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math
R = float(input("Digite o raio:"))

A = math.pi * R * R
V = math.pi * R * R * R  *4/3

print(round(A,3),round(V,3))
-- OUTPUT:
63.617 381.704
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 23:48:01) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math
R = float(input("Digite o raio:"))

A = math.pi * R * R
V = math.pi * R * R * R  *4/3

print(round(A,3),round(V,3))
-- EXECUTION TIME:
0.171319
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617 381.704
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388 7871.076
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
